# g09_prii3_ws

./: .gitignore  README.md  old_readme.md  package.xml  setup.cfg  setup.py
aruco/: aruco.py
aruco/aruco_detector/: aruco_dic_detector.py
calibracion/: calibrar_camara.py  camera_calibration.yml
launch/: Potential_Fields.launch.py  Potential_Fields_door_fast.launch.py  aruco_detector.launch.py  aruco_nav_launch.py  autonomous_navigation.launch.py  drawer_number_gazebo.launch.py  eurobot.launch.py  f1l3_world.launch.py  jetbot_drawer.launch.py  nav_f1l3_cordenadas.launch.py  obstacle_avoidance.launch.py  obstacle_avoidance_advanced.launch.py  obstacle_avoidance_simple.launch.py  rviz_predefinido_node.launch.py  sprint1.launch.py  sprint2.launch.py  tf_fixes.launch.py
maps/: Eurobot_valla.stl  VallaEuroBotCentro.stl  map1.pgm  map1.yaml  mapa_clase.pgm  mapa_clase.yaml  mapa_f1l3_gazebo.pgm  mapa_f1l3_gazebo.yaml  vallaEurobot.stl
mundos_gazebo/: eurobot.world  f1l3.world
mundos_gazebo/ar_tags/: generate_markers_model.py  generate_markers_model_resize.py
mundos_gazebo/ar_tags/model/aruco1_pau_clase_resized/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
mundos_gazebo/ar_tags/model/aruco2_pau_clase_resized/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
mundos_gazebo/ar_tags/model/aruco3_pau_clase_resized/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
mundos_gazebo/ar_tags/model/marker0/: model-1_4.sdf  model-1_5.sdf  model.sdf
mundos_gazebo/ar_tags/model/marker1/: model-1_4.sdf  model-1_5.sdf  model.sdf
mundos_gazebo/ar_tags/model/marker10/: model-1_4.sdf  model-1_5.sdf  model.sdf
mundos_gazebo/ar_tags/model/marker11/: model-1_4.sdf  model-1_5.sdf  model.sdf
mundos_gazebo/ar_tags/model/marker12/: model-1_4.sdf  model-1_5.sdf  model.sdf
mundos_gazebo/ar_tags/model/marker13/: model-1_4.sdf  model-1_5.sdf  model.sdf
mundos_gazebo/eurobot_world/: model.config  model.sdf
mundos_gazebo/f1l3/: model.config  model.sdf
sprint_1/prii3_ws/install/: local_setup.sh  setup.sh
sprint_1/prii3_ws/log/: latest_build
sprint_1/prii3_ws/prii3_turtlesim/: package.xml  setup.cfg  setup.py
sprint_2/ej_gazebo/gazebo_turtelbot/: README.md  setup.cfg  setup.py
sprint_2/ej_gazebo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
sprint_2/ej_gazebo/install/gazebo_turtelbot/share/gazebo_turtelbot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
sprint_2/ej_gazebo/log/: latest_build
src/g09_prii3/: Potential_Fields.py  aruco_detector.py  aruco_nav_node.py  autonomous_navigation.py  drawer_number.py  jetbot_drawer_node.py  nav_f1l3_cordenadas.py  obstacle_avoidance_node.py  prii3_turtlesim_node.py  rviz_predefinido_node.py
(+55 files in other folders)
